[package]
name = "plotters-cairo"
version = "0.3.1"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Plotters Cairo backend"
homepage = "https://plotters-rs.github.io"
repository = "https://github.com/plotters-rs/plotters-cairo"
readme = "README.md"

[dependencies]
plotters-backend = "^0.3.0"
cairo-rs = { version = "0.15.11", default-features = false }

[dev-dependencies]
plotters = { version = "^0.3.0", default_features = false }
cairo-rs = { version = "0.15.11", features = ["ps"], default-features = false }
